--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                    Kousei Richeson built the Word Hunter. app as
+                    Kousei Richeson built the Word Hunter. and Two Letter Word Learner apps as
                     a Free app. This SERVICE is provided by
                     Kousei Richeson at no cost and is intended for
                     use as is.
@@ -28,7 +28,7 @@
                   </p> <p>
                     The terms used in this Privacy Policy have the same meanings
                     as in our Terms and Conditions, which is accessible at
-                    Word Hunter. unless otherwise defined in this Privacy
+                    Word Hunter. or Two Letter Word Learner unless otherwise defined in this Privacy
                     Policy.
                   </p> <p><strong>Information Collection and Use</strong></p> <p>
                     For a better experience, while using our Service,
